--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,9 +53,12 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/dadaguai_logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.No.ActionBar"
+        android:windowSoftInputMode="stateHidden|stateUnchanged|stateVisible|adjustResize">
         <activity
-            android:name=".view.LoginActivity">
+            android:name=".view.FlashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoBar">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -63,7 +66,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.FlashActivity" />
+        <activity android:name=".view.LoginActivity" />
 
         <!-- - - - - - - - - - - - - - -即时通讯 环信 配置 - - - - - - - - - - - - - - - - - - -->
         <!-- 设置环信应用的AppKey -->
