--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,53 +1,107 @@
 apply plugin: 'com.android.application'
 
+static def buildTime() {
+    return new Date().format("yyyyMMdd");
+}
+
 android {
-    compileSdkVersion 28
+
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
+
     defaultConfig {
+
         applicationId "com.dadaguai.ddguai"
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "0.1.2"
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        versionCode rootProject.ext.android.versionCode
+        versionName rootProject.ext.android.versionName
+
+        multiDexEnabled true
+        //打包时间
+        resValue "string", "build_time", buildTime()
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+                includeCompileClasspath = true
+            }
+
+        }
+
+        multiDexEnabled true
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            //更改AndroidManifest.xml中预先定义好占位符信息
+            //manifestPlaceholders = [app_icon: "@drawable/icon"]
+            // 不显示Log
+            buildConfigField "boolean", "LEO_DEBUG", "false"
+            //是否zip对齐
+            zipAlignEnabled true
+            // 缩减resource文件
+            shrinkResources true
+            //Proguard
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            //给applicationId添加后缀“.debug”
+            applicationIdSuffix ".debug"
+            //manifestPlaceholders = [app_icon: "@drawable/launch_beta"]
+            buildConfigField "boolean", "LOG_DEBUG", "true"
+            zipAlignEnabled false
+            shrinkResources false
+            minifyEnabled false
+            debuggable true
         }
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation files('libs/hyphenatechat_3.5.2.jar')
+    implementation rootProject.ext.dependencies.appcompatV7
+    testImplementation rootProject.ext.dependencies.junit
+    androidTestImplementation rootProject.ext.dependencies.runner
+    androidTestImplementation rootProject.ext.dependencies.espresso
+    androidTestImplementation rootProject.ext.dependencies.design
     //    implementation 'com.google.android.gms:play-services-gcm:9.4.0'
     //    implementation 'com.hyphenate:hyphenate-sdk:3.3.0'
     //Butterknife
     implementation 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    //OK HTTP   Gson 依赖
-    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-    implementation 'com.squareup.okio:okio:1.7.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-    implementation 'com.google.code.gson:gson:2.8.1'
-    implementation 'com.lovedise:permissiongen:0.0.6'
+    implementation rootProject.ext.dependencies.glide
+    annotationProcessor rootProject.ext.dependencies.glideCompiler
+    //OK HTTP
+    implementation rootProject.ext.dependencies.okhttp
+    implementation rootProject.ext.dependencies.okio
+    //拦截器
+    implementation rootProject.ext.dependencies.interceptor
+    //json解析
+    implementation rootProject.ext.dependencies.gson
+    //权限申请
+    implementation rootProject.ext.dependencies.permissiongen
     //RecyclerView
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation rootProject.ext.dependencies.recyclerView
     //下拉刷新控件
-    implementation 'com.shizhefei:CoolRefreshView:1.0.2'
+    implementation rootProject.ext.dependencies.refreshView
     //banner
-    implementation 'com.youth.banner:banner:1.4.10'
-    implementation files('libs/core-3.3.0.jar')
+    implementation rootProject.ext.dependencies.banner
     //AutoLayout 屏幕适配
-    implementation 'com.zhy:autolayout:1.4.5'
+    implementation rootProject.ext.dependencies.autolayout
+    implementation files('libs/core-3.3.0.jar')
+    implementation files('libs/hyphenatechat_3.5.2.jar')
+
+    if (!isModule.toBoolean()) {
+
+    }
 }
