--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: "versions.gradle"
 buildscript {
     
     repositories {
@@ -19,10 +19,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-//        maven {
-//            url "https://raw.githubusercontent.com/HyphenateInc/Hyphenate-SDK-Android/master/repository"
-//        }
-
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
